--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "angular-material": "^1.1.0",
     "angular-messages": "^1.5.8",
     "angular-sanitize": "^1.5.8",
+    "angular-ui-router": "^0.3.1",
     "live-server": "^0.9.2",
     "systemjs": "^0.19.28",
     "typescript": "^1.8.10",
